WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
160757
[iOS WK2] Have WebKitTestRunnerApp.app use a UIViewController, and fix to avoid the status bar
https://bugs.webkit.org/show_bug.cgi?id=160757
Summary
[iOS WK2] Have WebKitTestRunnerApp.app use a UIViewController, and fix to avo...
Simon Fraser (smfr)
Reported
2016-08-10 16:31:27 PDT
[iOS WK2] Have WebKitTestRunnerApp.app use a UIViewController, and fix to avoid the status bar
Attachments
Patch
(33.36 KB, patch)
2016-08-10 16:35 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2016-08-10 16:35:19 PDT
Created
attachment 285782
[details]
Patch
Tim Horton
Comment 2
2016-08-10 16:54:13 PDT
Comment on
attachment 285782
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=285782&action=review
> Tools/WebKitTestRunner/ios/PlatformWebViewIOS.mm:103 > + const CGFloat statusBarHeight = 20;
Ideally this would use either [[UIApplication sharedApplication] statusBarFrame] or the VC's topLayoutGuide.
> Tools/WebKitTestRunner/ios/PlatformWebViewIOS.mm:117 > + UIViewController *viewController = [[UIViewController alloc] initWithNibName:nil bundle:nil];
You can just "init", I think.
Simon Fraser (smfr)
Comment 3
2016-08-10 17:11:33 PDT
https://trac.webkit.org/r204364
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug