[iOS WK2] Have WebKitTestRunnerApp.app use a UIViewController, and fix to avoid the status bar https://bugs.webkit.org/show_bug.cgi?id=160757

Reviewed by Tim Horton.

When programmatically creating the test UIWindow, make a root UIViewController and parent
the WKWebView in its view. This makes the app more like a normal UIKit application.

Move the WKWebView down 20px to avoid the status bar.

Give the UIWindow a gray background so it's obvious where the window and view positioned.

Sorted the project file. Removed the link to UIKit which showed red, and wasn't necessary.

Remove duplicate references to Launch.storyboard.

* WebKitTestRunner/WebKitTestRunner.xcodeproj/project.pbxproj:
* WebKitTestRunner/WebKitTestRunnerApp/AppDelegate.h: Add license.
* WebKitTestRunner/WebKitTestRunnerApp/AppDelegate.m: Add license.
(-[AppDelegate applicationWillResignActive:]): Deleted.
(-[AppDelegate applicationDidEnterBackground:]): Deleted.
(-[AppDelegate applicationWillEnterForeground:]): Deleted.
(-[AppDelegate applicationDidBecomeActive:]): Deleted.
(-[AppDelegate applicationWillTerminate:]): Deleted.
* WebKitTestRunner/ios/PlatformWebViewIOS.mm:
(WTR::viewRectForWindowRect):
(WTR::PlatformWebView::PlatformWebView):
(WTR::PlatformWebView::setWindowFrame):

Canonical link: https://commits.webkit.org/178875@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204364 268f45cc-cd09-0410-ab3c-d52691b4dbfc